--- a/app/src/main/res/drawable/rounded_rectangle_bg.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_bg.xml
@@ -4,6 +4,5 @@
     <stroke
         android:width="2dp"
         android:color="@color/cardview_dark_background" />
-    <corners
-        android:radius="93dp"/>
+    <corners android:radius="93dp" />
 </shape>
