--- a/app/src/main/res/layout/fragment_otp_for_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_otp_for_forgot_password.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/otp_forget_pwd_page"
             android:layout_width="wrap_content"
@@ -29,8 +30,7 @@
                 android:text="Code has been sent to you email if the entered email is registered with us"
                 android:textColor="@color/email__color"
                 android:textSize="14sp"
-                android:textStyle="bold"
-               />
+                android:textStyle="bold" />
 
 
             <View
@@ -68,13 +68,13 @@
 
             <Button
                 android:id="@+id/otpContinueBtnView"
+                style="@style/default_disabled_button"
                 android:layout_width="240dp"
                 android:layout_height="51dp"
                 android:layout_marginStart="46dp"
                 android:layout_marginTop="500dp"
                 android:text="Continue"
-                android:textColor="@color/white"
-                style="@style/default_disabled_button" />
+                android:textColor="@color/white" />
         </RelativeLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
