--- a/app/src/main/res/drawable/default_button.xml
+++ b/app/src/main/res/drawable/default_button.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
- <item>
-     <shape android:shape="rectangle">
-         <solid android:color="@color/black" />
-<corners android:radius="22dp"/>
-         <stroke android:color="@color/primary_color" android:width="2dp"/>
-<size android:width="20dp" android:height="20dp"/>
-     </shape>
- </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/black" />
+            <corners android:radius="22dp" />
+            <stroke android:width="2dp" android:color="@color/primary_color" />
+            <size android:width="20dp" android:height="20dp" />
+        </shape>
+    </item>
 </selector>
