--- a/app/src/main/res/drawable/rectangle_11_shape.xml
+++ b/app/src/main/res/drawable/rectangle_11_shape.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- rectangle_11 from your XD file. -->
+<?xml version="1.0" encoding="utf-8"?><!-- rectangle_11 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle" >
-	<corners android:radius="500dp" />
+    android:shape="rectangle">
+    <corners android:radius="500dp" />
 
 </shape>
 
