--- a/app/src/main/res/drawable/rectangle_8_shape.xml
+++ b/app/src/main/res/drawable/rectangle_8_shape.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- rectangle_8 from your XD file. -->
+<?xml version="1.0" encoding="utf-8"?><!-- rectangle_8 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle" >
-	<corners android:radius="500dp" />
-	<stroke android:color="@color/rectangle_stroke" />
-	<stroke android:width="1dp" />
-	<!--<solid android:color="@color/rectangle_12_color" /> -->
+    android:shape="rectangle">
+    <corners android:radius="500dp" />
+    <stroke android:color="@color/rectangle_stroke" />
+    <stroke android:width="1dp" />
+    <!--<solid android:color="@color/rectangle_12_color" /> -->
 </shape>
 
