--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="552dp"
     android:layout_height="match_parent"
     android:background="@color/black"
@@ -81,7 +79,7 @@
             android:background="@null"
             android:fontFamily="Inter"
             android:gravity="left"
-            android:hint="email@domain.com"
+            android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="#303843"
@@ -92,9 +90,9 @@
             android:id="@+id/login_email_error_text"
             android:layout_width="260dp"
             android:layout_height="18dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="70dp"
             android:layout_marginTop="210dp"
-            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:background="@drawable/default_edit_text"
             android:backgroundTint="@color/secondary_error_color"
@@ -141,7 +139,7 @@
             android:background="@null"
             android:fontFamily="Inter"
             android:gravity="left"
-            android:hint="Pwd@123"
+            android:hint="Password"
             android:inputType="textPassword"
             android:textColor="@color/white"
             android:textColorHint="#303843"
@@ -152,9 +150,9 @@
             android:id="@+id/login_pwd_error_text"
             android:layout_width="260dp"
             android:layout_height="18dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="70dp"
             android:layout_marginTop="325dp"
-            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:background="@drawable/default_edit_text"
             android:backgroundTint="@color/secondary_error_color"
@@ -163,9 +161,9 @@
             android:minWidth="350dp"
             android:minHeight="10dp"
             android:paddingLeft="20dp"
+            android:text="Password is required"
             android:textColor="@color/error_text_color"
             android:textSize="12sp"
-            android:text="Password is required"
             android:visibility="gone" />
 
         <Button
