--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,151 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/black"
-    android:layout_height="match_parent">
-        <!--    android:alpha="0.3"-->
-        <!--    >-->
+    android:layout_height="match_parent"
+    android:background="@color/black">
+    <!--    android:alpha="0.3"-->
+    <!--    >-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            tools:context=".signup.RegisterActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        tools:context=".signup.RegisterActivity">
 
-                <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
+        <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
 
-                <TextView
-                    android:id="@+id/signup"
-                    android:layout_width="261dp"
-                    android:layout_height="34dp"
-                    android:layout_marginLeft="75dp"
-                    android:layout_marginTop="40dp"
-                    android:fontFamily="Inter"
-                    android:gravity="center"
-                    android:text="Sign up for free"
-                    android:textColor="@color/_bg__signin_page_color"
-                    android:textSize="19sp"
-                    android:textStyle="bold" />
+        <TextView
+            android:id="@+id/signup"
+            android:layout_width="261dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginTop="40dp"
+            android:fontFamily="Inter"
+            android:gravity="center"
+            android:text="Sign up for free"
+            android:textColor="@color/_bg__signin_page_color"
+            android:textSize="19sp"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/register_name_label"
-                    style="@style/mandatory_label_text"
-                    android:text="Name" />
+        <TextView
+            android:id="@+id/register_name_label"
+            style="@style/mandatory_label_text"
+            android:text="Name" />
 
-                <EditText
-                    android:id="@+id/register_name_text"
-                    style="@style/default_edit_text"
-                    android:hint="Name" />
+        <EditText
+            android:id="@+id/register_name_text"
+            style="@style/default_edit_text"
+            android:hint="Name" />
 
-                <TextView
-                    android:id="@+id/register_name_error_text"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Name is required" />
-
-
-
-                <TextView
-                    android:id="@+id/register_phone_number_label"
-                    style="@style/mandatory_label_text"
-                    android:text="Phone Number" />
-
-                <EditText
-                    android:id="@+id/register_phone_number_text"
-                    style="@style/default_edit_text"
-                    android:hint="Phone Number"
-                    android:inputType="phone" />
-
-                <TextView
-                    android:id="@+id/register_phone_number_error_text"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Phone Number is required" />
-                <TextView
-                    android:id="@+id/register_phone_number_error_text2"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Invalid phone number" />
-
-                <TextView
-                    android:id="@+id/register_email_label"
-                    style="@style/mandatory_label_text"
-                    android:text="Email" />
-
-                <EditText
-                    android:id="@+id/register_email_text"
-                    style="@style/default_edit_text"
-                    android:hint="Email" />
-
-                <TextView
-                    android:id="@+id/register_email_error_text"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Email is required" />
-
-                <TextView
-                    android:id="@+id/register_email_error_text2"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Invalid Email" />
+        <TextView
+            android:id="@+id/register_name_error_text"
+            style="@style/default_error_text"
+            android:text="Name is required"
+            android:visibility="gone" />
 
 
-                <TextView
-                    android:id="@+id/register_pwd_label"
-                    style="@style/mandatory_label_text"
-                    android:text="Password" />
+        <TextView
+            android:id="@+id/register_phone_number_label"
+            style="@style/mandatory_label_text"
+            android:text="Phone Number" />
 
-                <EditText
-                    android:id="@+id/register_pwd_text"
-                    style="@style/default_edit_text"
-                    android:inputType="textPassword"
-                    android:hint="Password" />
+        <EditText
+            android:id="@+id/register_phone_number_text"
+            style="@style/default_edit_text"
+            android:hint="Phone Number"
+            android:inputType="phone" />
 
-                <TextView
-                    android:id="@+id/register_pwd_error_text"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Passwords must be of 8 char" />
-                <TextView
-                    android:id="@+id/register_repwd_label"
-                    style="@style/mandatory_label_text"
-                    android:text="Re-Type Password" />
+        <TextView
+            android:id="@+id/register_phone_number_error_text"
+            style="@style/default_error_text"
+            android:text="Phone Number is required"
+            android:visibility="gone" />
 
-                <EditText
-                    android:id="@+id/register_repwd_text"
-                    style="@style/default_edit_text"
-                    android:inputType="textPassword"
-                    android:hint="Password" />
+        <TextView
+            android:id="@+id/register_phone_number_error_text2"
+            style="@style/default_error_text"
+            android:text="Invalid phone number"
+            android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/register_repwd_error_text"
-                    style="@style/default_error_text"
-                    android:visibility="gone"
-                    android:text="Passwords must match" />
+        <TextView
+            android:id="@+id/register_email_label"
+            style="@style/mandatory_label_text"
+            android:text="Email" />
+
+        <EditText
+            android:id="@+id/register_email_text"
+            style="@style/default_edit_text"
+            android:hint="Email" />
+
+        <TextView
+            android:id="@+id/register_email_error_text"
+            style="@style/default_error_text"
+            android:text="Email is required"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/register_email_error_text2"
+            style="@style/default_error_text"
+            android:text="Invalid Email"
+            android:visibility="gone" />
 
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/register_pwd_label"
+            style="@style/mandatory_label_text"
+            android:text="Password" />
 
-        <ProgressBar
-            android:id="@+id/register_progress_bar"
-            style="@style/default_progress_bar" />
+        <EditText
+            android:id="@+id/register_pwd_text"
+            style="@style/default_edit_text"
+            android:hint="Password"
+            android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/signup_button"
-            style="@style/default_disabled_button"
-            android:layout_width="250dp"
-            android:layout_height="51dp"
-            android:layout_alignParentBottom="false"
-            android:layout_centerHorizontal="false"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="600dp"
-            android:backgroundTint="#A9CACF"
-            android:onClick="onClickSignUpButton"
-            android:text="Sign Up"
-            android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/register_pwd_error_text"
+            style="@style/default_error_text"
+            android:text="Passwords must be of 8 char"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/register_repwd_label"
+            style="@style/mandatory_label_text"
+            android:text="Re-Type Password" />
+
+        <EditText
+            android:id="@+id/register_repwd_text"
+            style="@style/default_edit_text"
+            android:hint="Password"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/register_repwd_error_text"
+            style="@style/default_error_text"
+            android:text="Passwords must match"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/register_progress_bar"
+        style="@style/default_progress_bar" />
+
+    <Button
+        android:id="@+id/signup_button"
+        style="@style/default_disabled_button"
+        android:layout_width="250dp"
+        android:layout_height="51dp"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="false"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="600dp"
+        android:backgroundTint="#A9CACF"
+        android:onClick="onClickSignUpButton"
+        android:text="Sign Up"
+        android:textColor="@color/white" />
 
 
 </RelativeLayout>
