--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -8,87 +8,87 @@
     android:layout_height="match_parent">
     <!--    android:alpha="0.3"-->
     <!--    >-->
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        tools:context=".category.AddCategoryFragment">
+        android:layout_height="wrap_content">
 
-        <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            tools:context=".category.AddCategoryFragment">
 
-        <TextView
-            android:id="@+id/category_name_label"
-            style="@style/mandatory_label_text"
-            android:text="Name" />
+            <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
 
-        <EditText
-            android:id="@+id/category_name_text"
-            style="@style/default_edit_text"
-            android:hint="Name" />
+            <TextView
+                android:id="@+id/category_name_label"
+                style="@style/mandatory_label_text"
+                android:text="Name" />
 
-        <TextView
-            android:id="@+id/category_name_error_text"
-            style="@style/default_error_text"
-            android:visibility="gone"
-            android:text="Category name is required" />
+            <EditText
+                android:id="@+id/category_name_text"
+                style="@style/default_edit_text"
+                android:hint="Name" />
 
-        <TextView
-            android:id="@+id/category_details_label"
-            style="@style/default_label_text"
-            android:text="Description" />
+            <TextView
+                android:id="@+id/category_name_error_text"
+                style="@style/default_error_text"
+                android:text="Category name is required"
+                android:visibility="gone" />
 
-        <EditText
-            android:id="@+id/category_details_text"
-            style="@style/default_edit_text"
-            android:hint="Description" />
+            <TextView
+                android:id="@+id/category_details_label"
+                style="@style/default_label_text"
+                android:text="Description" />
 
-        <TextView
-            android:id="@+id/category_icon_label"
-            style="@style/default_label_text"
-            android:text="Select Icon" />
+            <EditText
+                android:id="@+id/category_details_text"
+                style="@style/default_edit_text"
+                android:hint="Description" />
 
-        <Spinner
-            android:id="@+id/spinner_icon"
-            android:layout_width="@dimen/_250sdp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:background="@drawable/default_spinner_dropdown"
-            android:overlapAnchor="false"
-            app:boxBackgroundColor="@color/disabled_color"
-            app:boxCornerRadiusBottomStart="20dp"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:popupTheme="@style/spinner_menu">
-        </Spinner>
+            <TextView
+                android:id="@+id/category_icon_label"
+                style="@style/default_label_text"
+                android:text="Select Icon" />
 
-
-        <TextView
-            android:id="@+id/category_clinic_label"
-            style="@style/mandatory_label_text"
-            android:layout_marginLeft="45dp"
-            android:text="Assign Clinic" />
-
-        <Spinner
-            android:id="@+id/spinner_clinic"
-            android:layout_width="@dimen/_250sdp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:background="@drawable/default_spinner_dropdown"
-            android:overlapAnchor="false"
-            app:boxBackgroundColor="@color/disabled_color"
-            app:boxCornerRadiusBottomStart="20dp"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:popupTheme="@style/spinner_menu">
-        </Spinner>
+            <Spinner
+                android:id="@+id/spinner_icon"
+                android:layout_width="@dimen/_250sdp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:background="@drawable/default_spinner_dropdown"
+                android:overlapAnchor="false"
+                app:boxBackgroundColor="@color/disabled_color"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:popupTheme="@style/spinner_menu"></Spinner>
 
 
-    </LinearLayout>
-</ScrollView>
+            <TextView
+                android:id="@+id/category_clinic_label"
+                style="@style/mandatory_label_text"
+                android:layout_marginLeft="45dp"
+                android:text="Assign Clinic" />
+
+            <Spinner
+                android:id="@+id/spinner_clinic"
+                android:layout_width="@dimen/_250sdp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:background="@drawable/default_spinner_dropdown"
+                android:overlapAnchor="false"
+                app:boxBackgroundColor="@color/disabled_color"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:popupTheme="@style/spinner_menu"></Spinner>
+
+
+        </LinearLayout>
+    </ScrollView>
+
     <ProgressBar
         android:id="@+id/category_progress_bar"
         style="@style/default_progress_bar" />
@@ -96,8 +96,7 @@
     <Button
         android:id="@+id/category_save_button"
         style="@style/default_disabled_button"
-        android:text="Save"
-        />
+        android:text="Save" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -125,12 +124,12 @@
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
+            android:backgroundTint="@color/secondary_error_color"
             android:maxWidth="35dp"
             android:text="Delete"
             android:textAlignment="center"
-            android:visibility="gone"
-            android:backgroundTint="@color/secondary_error_color"
             android:textColor="@color/error_text_color"
+            android:visibility="gone"
             app:cornerRadius="100dp" />
 
     </LinearLayout>
