--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:isScrollContainer="true"
-    android:scrollbars="vertical"
-    android:layout_height="match_parent">
-<!--    android:alpha="0.3"-->
-<!--    >-->
+    android:scrollbars="vertical">
+    <!--    android:alpha="0.3"-->
+    <!--    >-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/clinic_name_error_text"
             style="@style/default_error_text"
-           
+
             android:text="Clinic name is required" />
 
         <TextView
@@ -61,7 +61,7 @@
         <TextView
             android:id="@+id/clinic_phone_number_error_text"
             style="@style/default_error_text"
-           
+
             android:text="Phone Number is required" />
 
 
@@ -79,7 +79,6 @@
             android:id="@+id/clinic_street_error_text"
             style="@style/default_error_text"
             android:text="Street is required" />
-
 
 
         <TextView
@@ -108,7 +107,7 @@
         <EditText
             android:id="@+id/clinic_county_text"
             style="@style/default_edit_text"
-            android:hint="ZipCode" />
+            android:hint="County" />
 
         <TextView
             android:id="@+id/clinic_county_error_text"
@@ -134,11 +133,6 @@
             android:text="Zipcode is required" />
 
 
-
-
-
-
-
         <TextView
             android:id="@+id/category_country_label"
             style="@style/mandatory_label_text"
@@ -155,56 +149,49 @@
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
-            app:popupTheme="@style/spinner_menu">
-        </Spinner>
+            app:popupTheme="@style/spinner_menu"></Spinner>
 
-
-
-
-
-
-
-
-    <Button
-        android:id="@+id/clinic_save_button"
-        style="@style/default_disabled_button"
-        android:text="Save"
-    />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-
-        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/clinic_edit_button"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="80dp"
-            android:maxWidth="35dp"
-            android:text="Save"
-            android:textAlignment="center"
-            android:visibility="gone"
-            app:cornerRadius="100dp" />
+            android:id="@+id/clinic_save_button"
+            style="@style/default_disabled_button"
+            android:text="Save" />
 
-        <Button
-            android:id="@+id/clinic_delete_button"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="80dp"
-            android:maxWidth="35dp"
-            android:text="Delete"
-            android:textAlignment="center"
-            android:backgroundTint="@color/secondary_error_color"
-            android:textColor="@color/error_text_color"
-            android:visibility="gone"
-            app:cornerRadius="100dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
 
-    </LinearLayout>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/clinic_edit_button"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="80dp"
+                android:maxWidth="35dp"
+                android:text="Save"
+                android:textAlignment="center"
+                android:visibility="gone"
+                app:cornerRadius="100dp" />
+
+            <Button
+                android:id="@+id/clinic_delete_button"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="80dp"
+                android:backgroundTint="@color/secondary_error_color"
+                android:maxWidth="35dp"
+                android:text="Delete"
+                android:textAlignment="center"
+                android:textColor="@color/error_text_color"
+                android:visibility="gone"
+                app:cornerRadius="100dp" />
+
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
