--- a/app/src/main/res/layout/add_doctor.xml
+++ b/app/src/main/res/layout/add_doctor.xml
@@ -128,8 +128,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/doctor_edit_button"
@@ -151,8 +150,8 @@
             android:maxWidth="35dp"
             android:text="Delete"
             android:textAlignment="center"
-            android:visibility="gone"
             android:textColor="@color/error_text_color"
+            android:visibility="gone"
             app:cornerRadius="100dp" />
 
     </LinearLayout>
