--- a/app/src/main/res/layout/cancel_appointment_admin_specific_fragment.xml
+++ b/app/src/main/res/layout/cancel_appointment_admin_specific_fragment.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
         android:background="@color/black"
+        android:orientation="vertical"
         tools:context=".acceptdenyappointmentadmin.CancelAppointmentAdminSpecificFragment">
 
         <TextView
@@ -20,8 +19,7 @@
 
         <TextView
             android:id="@+id/label1value"
-            style="@style/default_edit_text"
-            />
+            style="@style/default_edit_text" />
 
         <TextView
             android:id="@+id/label2"
@@ -30,8 +28,7 @@
 
         <TextView
             android:id="@+id/label2value"
-            style="@style/default_edit_text"
-            />
+            style="@style/default_edit_text" />
 
         <TextView
             android:id="@+id/label3"
@@ -40,21 +37,20 @@
 
         <TextView
             android:id="@+id/label3value"
-            style="@style/default_edit_text"
-            />
+            style="@style/default_edit_text" />
+
         <Button
             android:id="@+id/cancelAppointmentButton"
-            android:text="Cancel Appointment"
-            android:backgroundTint="#A9CACF"
+            style="@style/default_disabled_button"
             android:layout_width="300dp"
             android:layout_height="51dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="100dp"
-            android:textColor="#408E9B"
+            android:backgroundTint="#A9CACF"
             android:clickable="true"
             android:enabled="true"
-            style="@style/default_disabled_button"
-            />
+            android:text="Cancel Appointment"
+            android:textColor="#408E9B" />
 
         <Button
             android:id="@+id/acceptAppointmentButton"
@@ -64,9 +60,9 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="50dp"
             android:backgroundTint="#A9CACF"
-            android:textColor="#408E9B"
             android:clickable="true"
             android:enabled="true"
-            android:text="Accept Appointment" />
+            android:text="Accept Appointment"
+            android:textColor="#408E9B" />
     </LinearLayout>
 </RelativeLayout>
