--- a/app/src/main/res/layout/cancel_appointment_fragment.xml
+++ b/app/src/main/res/layout/cancel_appointment_fragment.xml
@@ -1,47 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
         android:background="@color/black"
+        android:orientation="vertical"
         tools:context=".appointmentstatus.CancelAppointmentFragment">
 
-    <TextView
-        android:id="@+id/label1"
-        style="@style/default_label_text"
-        android:text="Doctor Name" />
+        <TextView
+            android:id="@+id/label1"
+            style="@style/default_label_text"
+            android:text="Doctor Name" />
 
-    <TextView
-        android:id="@+id/label1value"
-        style="@style/default_edit_text"
-         />
+        <TextView
+            android:id="@+id/label1value"
+            style="@style/default_edit_text" />
 
-    <TextView
-        android:id="@+id/label2"
-        style="@style/default_label_text"
-        android:text="Scheduled Date" />
+        <TextView
+            android:id="@+id/label2"
+            style="@style/default_label_text"
+            android:text="Scheduled Date" />
 
-    <TextView
-        android:id="@+id/label2value"
-        style="@style/default_edit_text"
-        />
+        <TextView
+            android:id="@+id/label2value"
+            style="@style/default_edit_text" />
 
-    <TextView
-        android:id="@+id/label3"
-        style="@style/default_label_text"
-        android:text="Scheduled Time" />
+        <TextView
+            android:id="@+id/label3"
+            style="@style/default_label_text"
+            android:text="Scheduled Time" />
 
-    <TextView
-        android:id="@+id/label3value"
-        style="@style/default_edit_text"
-        />
+        <TextView
+            android:id="@+id/label3value"
+            style="@style/default_edit_text" />
 
         <Button
             android:id="@+id/cancelAppointmentButton"
@@ -56,4 +52,4 @@
             android:text="Cancel Appointment"
             android:textColor="#408E9B" />
     </LinearLayout>
-    </RelativeLayout>
+</RelativeLayout>
