--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -4,14 +4,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/clinic_doctor_specialist_card"
 
+    style="@style/doctor_specialist_card"
     android:layout_width="100dp"
-    android:layout_height="150dp"
-    style="@style/doctor_specialist_card">
+    android:layout_height="150dp">
 
     <ImageView
         android:id="@+id/category_id"
-        style="@style/dashboard_specialist_menu_image_view"
-       />
+        style="@style/dashboard_specialist_menu_image_view" />
 
     <TextView
         android:id="@+id/category_name"
@@ -20,10 +19,10 @@
 
         android:text="Neurologist" />
 
-<!--    <TextView-->
-<!--        style="@style/dashboard_menu_text"-->
-<!--        android:layout_marginLeft="5dp"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:text="10 doctors" />-->
+    <!--    <TextView-->
+    <!--        style="@style/dashboard_menu_text"-->
+    <!--        android:layout_marginLeft="5dp"-->
+    <!--        android:layout_marginTop="40dp"-->
+    <!--        android:text="10 doctors" />-->
 </androidx.cardview.widget.CardView>
 
