--- a/app/src/main/res/layout/clinic_list.xml
+++ b/app/src/main/res/layout/clinic_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,10 +20,8 @@
             android:layout_height="307dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:visibility="gone"
-            android:src="@drawable/empty_clinic" />
-
-
+            android:src="@drawable/empty_clinic"
+            android:visibility="gone" />
 
 
         <TextView
@@ -32,10 +29,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:visibility="gone"
             android:text="@string/empty_clinic"
-            android:textColor="@color/white" />
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:visibility="gone" />
 
 
         <ProgressBar
