--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    android:id="@+id/customToastLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/customToastLayout"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="10dp">
@@ -17,8 +17,8 @@
 
     <TextView
         android:id="@+id/txtCustomToast"
-        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:textColor="@color/white" />
 </LinearLayout>
