--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +11,6 @@
         android:layout_height="match_parent"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp">
-
-
 
 
         <TextView
@@ -86,8 +83,7 @@
             android:textColor="@color/white"
             android:textColorHint="#303843"
             android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
 
         <TextView
@@ -132,12 +128,12 @@
 
         <Button
             android:id="@+id/SavePwdButtonView"
+            style="@style/default_disabled_button"
             android:layout_width="240dp"
             android:layout_height="51dp"
             android:layout_marginStart="90dp"
             android:layout_marginTop="516dp"
             android:text="Save"
-            android:textColor="@color/white"
-            style="@style/default_disabled_button" />
-           </RelativeLayout>
+            android:textColor="@color/white" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
