--- a/app/src/main/res/layout/fragment_successful_reset_password.xml
+++ b/app/src/main/res/layout/fragment_successful_reset_password.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/forget_pwd_page"
             android:layout_width="wrap_content"
@@ -25,10 +26,10 @@
                 android:id="@+id/logoImageView"
                 android:layout_width="139dp"
                 android:layout_height="137dp"
+                android:layout_gravity="center"
                 android:layout_marginLeft="140dp"
                 android:layout_marginTop="40dp"
                 android:src="@drawable/logo"
-                android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,11 +44,11 @@
                 android:layout_marginLeft="150dp"
                 android:layout_marginTop="190dp"
                 android:fontFamily="Inter"
+                android:lineHeight="36sp"
                 android:text="MediAssist"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:lineHeight="36sp"/>
+                android:textStyle="bold" />
 
 
             <TextView
@@ -58,11 +59,11 @@
                 android:layout_marginLeft="160dp"
                 android:layout_marginTop="220dp"
                 android:fontFamily="Inter"
+                android:lineHeight="36sp"
                 android:text="Congrats!"
                 android:textColor="#408E9B"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:lineHeight="36sp"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/ReadyView"
@@ -72,21 +73,21 @@
                 android:layout_marginLeft="110dp"
                 android:layout_marginTop="250dp"
                 android:fontFamily="Inter"
+                android:lineHeight="24sp"
                 android:text="Your account is ready to use."
                 android:textColor="#408E9B"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:lineHeight="24sp"/>
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/HomePageButtonView"
+                style="@style/default_disabled_button"
                 android:layout_width="240dp"
                 android:layout_height="51dp"
                 android:layout_marginStart="90dp"
                 android:layout_marginTop="500dp"
                 android:text="Home Page"
-                android:textColor="@color/white"
-                style="@style/default_disabled_button" />
+                android:textColor="@color/white" />
         </RelativeLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
