--- a/app/src/main/res/layout/schedule_appointment_fragment.xml
+++ b/app/src/main/res/layout/schedule_appointment_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,8 +21,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/img"
-            android:paddingTop="30px"
             android:paddingLeft="15px"
+            android:paddingTop="30px"
             android:textColor="#408E9B"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -135,12 +134,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@null"
+                android:onClick="nextWeekAction"
                 android:text="@string/forward"
                 android:textColor="@color/blue"
-                android:background="@null"
-                android:textStyle="bold"
-                android:onClick="nextWeekAction"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -156,79 +155,82 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="SUN"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="MON"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TUE"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="WED"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="THUR"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="FRI"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="SAT"
-                android:textColor="#408E9B"
                 android:textAlignment="center"
-                android:textSize="16sp"/>
+                android:textColor="#408E9B"
+                android:textSize="16sp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="445dp"
             android:orientation="horizontal">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/calendarRecyclerView"
                 android:layout_width="match_parent"
-                android:background="#252525"
                 android:layout_height="50dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="#252525" />
 
 
         </LinearLayout>
+
         <Button
             android:id="@+id/bookAptBtn"
             android:layout_width="match_parent"
@@ -239,9 +241,9 @@
             android:layout_marginEnd="30dp"
             android:background="@drawable/rounded_rectangle_bg"
             android:backgroundTint="#A9CACF"
+            android:onClick="bookTimeSlotAction"
             android:padding="10dp"
             android:text="Book Appointment"
-            android:onClick="bookTimeSlotAction"
             android:textColorHint="@color/white"
             android:textSize="14dp"
             android:textStyle="bold" />
@@ -251,10 +253,10 @@
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--<ImageButton
-            android:id="@+id/searchBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:padding="20dp"
-            android:src="@drawable/img_2" />-->
+    <!--<ImageButton
+                android:id="@+id/searchBackButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:padding="20dp"
+                android:src="@drawable/img_2" />-->
