--- a/app/src/main/res/layout/super_admin_dashboard.xml
+++ b/app/src/main/res/layout/super_admin_dashboard.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="45dp"
             android:layout_marginTop="30dp"
-            android:textColor="@color/white"
             android:text="Appointments"
+            android:textColor="@color/white"
             android:textFontWeight="1000"
             android:textStyle="bold" />
 
@@ -43,10 +42,9 @@
                     android:src="@drawable/hospital" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:text="Clinic"
                     style="@style/dashboard_menu_text"
-                     />
+                    android:layout_marginLeft="5dp"
+                    android:text="Clinic" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -58,15 +56,16 @@
                     android:src="@drawable/clinic_admin" />
 
                 <TextView
-                    android:layout_marginLeft="5dp"
-                    android:text="Clinic Admin"
                     style="@style/dashboard_menu_text"
-                    />
+                    android:layout_marginLeft="5dp"
+                    android:text="Clinic Admin" />
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
-        <include layout="@layout/clinic_admin_layout"
-            android:id="@+id/clinic_admin_layout"/>
+
+        <include
+            android:id="@+id/clinic_admin_layout"
+            layout="@layout/clinic_admin_layout" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
