--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/welcome_fragment"
     android:layout_width="552dp"
     android:layout_height="match_parent"
     android:background="@color/black"
     android:backgroundTint="@color/black"
-    android:id="@+id/welcome_fragment"
     android:elevation="0dp"
     tools:context=".WelcomeFragment">
 
@@ -70,22 +70,21 @@
 
         <Button
             android:id="@+id/signupButtonView"
+            style="@style/default_button"
             android:layout_marginStart="80dp"
             android:layout_marginTop="145dp"
             android:layout_marginEnd="42dp"
             android:text="@string/signup"
-            android:textColor="@color/white"
-            style="@style/default_button"/>
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/signinButtonView"
+            style="@style/default_button"
             android:layout_marginStart="80dp"
             android:layout_marginTop="220dp"
             android:layout_marginEnd="42dp"
-            android:textColor="@color/white"
             android:text="@string/signin"
-            style="@style/default_button"/>
-
+            android:textColor="@color/white" />
 
 
     </androidx.cardview.widget.CardView>
