--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,18 @@
         <item name="android:height">60dp</item>
         <item name="backgroundTint">@color/black</item>
         <item name="android:minWidth">250dp</item>
-        <item name="android:clickable"> true</item>
+        <item name="android:clickable">true</item>
         <item name="android:enabled">true</item>
+    </style>
+
+    <style name="default_alert_button">
+
+        <item name="strokeColor">@color/primary_color</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="cornerRadius">22dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@color/black</item>
+
     </style>
 
     <style name="default_edit_text">
@@ -92,6 +102,18 @@
         <item name="android:visibility">gone</item>
     </style>
 
+
+    <style name="MyAlertDialogTheme">
+        <item name="android:windowBackground">@color/disabled_color</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:textColor">@color/primary_color</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:textColorPrimary">@color/primary_color</item>
+        <item name="android:colorAccent">@color/primary_color</item>
+        <item name="buttonBarButtonStyle">@style/default_alert_button</item>
+
+    </style>
+
     <style name="dashboard_card">
         <item name="android:layout_width">140dp</item>
         <item name="android:layout_height">100dp</item>
@@ -151,6 +173,7 @@
         <item name="android:radius">10dp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
     <style name="spinner" parent="Base.Widget.AppCompat.Spinner">
         <item name="android:textColor">@color/white</item>
         <item name="hintTextColor">@color/white</item>
