--- a/app/src/main/res/drawable/rounded_rectangle_bg.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_bg.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/cardview_dark_background" />
+        android:color="@color/primary_color" />
     <corners android:radius="93dp" />
 </shape>
