--- a/app/src/main/res/layout/confirm_appointment_fragment.xml
+++ b/app/src/main/res/layout/confirm_appointment_fragment.xml
@@ -27,38 +27,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="70dp"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/morning_btn"
                 android:layout_width="160dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/rounded_rectangle_bg"
                 android:drawableLeft="@drawable/sun"
+
                 android:paddingLeft="35px"
-                android:paddingTop="25px"
+                android:paddingTop="30px"
                 android:paddingBottom="35px"
                 android:text="   Morning"
-                android:textColor="#408E9B"
+                android:textColor="@color/primary_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/evening_btn"
                 android:layout_width="160dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/rounded_rectangle_bg"
                 android:drawableLeft="@drawable/evening"
                 android:paddingLeft="35px"
-                android:paddingTop="25px"
+                android:paddingTop="30px"
                 android:paddingBottom="35px"
                 android:text="   Evening"
-                android:textColor="#408E9B"
+                android:textColor="@color/primary_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -103,7 +106,8 @@
             android:layout_marginTop="530dp"
             android:layout_marginEnd="30dp"
             android:background="@drawable/rounded_rectangle_bg"
-            android:backgroundTint="#A9CACF"
+            android:backgroundTint="@color/primary_color"
+            android:layout_alignParentBottom="true"
             android:padding="10dp"
             android:text="Confirm Appointment"
             android:textColorHint="@color/white"
