--- a/app/src/main/res/layout/fragment_patient_dashboard.xml
+++ b/app/src/main/res/layout/fragment_patient_dashboard.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="top|start"
         android:layout_marginTop="15dp"
         android:width="450dp"
+
         android:backgroundTint="@color/search_box_color"
         android:drawableEnd="@drawable/ic_baseline_search_24"
         android:hint="Search"
@@ -27,6 +28,7 @@
         android:id="@+id/search_rv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/_20sdp">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -46,7 +48,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="45dp"
-                android:layout_marginTop="30dp"
                 android:text="Specialist Doctor"
                 android:textColor="@color/white"
                 android:textFontWeight="1000"
@@ -57,7 +58,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
-                android:layout_marginTop="30dp"
                 android:text="See all"
                 android:textColor="@color/primary_color"
                 android:textFontWeight="1000"
@@ -122,7 +122,8 @@
 
                     <TextView
                         style="@style/dashboard_menu_text"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginLeft="20dp"
                         android:text="Make an appointment" />
 
                 </androidx.cardview.widget.CardView>
@@ -138,6 +139,7 @@
                     <TextView
                         style="@style/dashboard_menu_text"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="Pending Appointments" />
                 </androidx.cardview.widget.CardView>
 
@@ -152,6 +154,7 @@
                     <TextView
                         style="@style/dashboard_menu_text"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="Accepted Appointments" />
                 </androidx.cardview.widget.CardView>
 
@@ -166,6 +169,7 @@
                     <TextView
                         style="@style/dashboard_menu_text"
                         android:layout_marginLeft="20dp"
+                        android:layout_marginTop="30dp"
                         android:text="Cancelled Appointments" />
                 </androidx.cardview.widget.CardView>
 
