--- a/app/src/main/res/drawable/rectangle_7_shape.xml
+++ b/app/src/main/res/drawable/rectangle_7_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="500dp" />
-    <stroke android:color="@color/rectangle_stroke" />
+    <stroke android:color="@color/primary_color" />
     <stroke android:width="1dp" />
     <!--<solid android:color="@color/rectangle_12_color" /> -->
 
