--- a/app/src/main/res/layout/doctor_list.xml
+++ b/app/src/main/res/layout/doctor_list.xml
@@ -20,7 +20,7 @@
             android:layout_height="307dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:src="@drawable/empty_clinic"
+            android:src="@drawable/empty_doctor"
             android:visibility="gone" />
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/empty_clinic"
+            android:text="No doctors found! Try to add by clicking \n on plus button at the top."
             android:textAlignment="center"
             android:textColor="@color/white"
             android:visibility="gone" />
