--- a/app/src/main/res/layout/pending_appointment_fragment.xml
+++ b/app/src/main/res/layout/pending_appointment_fragment.xml
@@ -6,16 +6,41 @@
     tools:context=".appointmentstatus.PendingAppointmentFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:gravity="center"
         android:orientation="vertical">
 
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/clinic_empty_gif"
+            android:layout_width="307dp"
+            android:layout_height="307dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:src="@drawable/empty_gif"
+            android:visibility="gone" />
+
+
+        <TextView
+            android:id="@+id/clinic_not_found_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="No appointments are pending! Schedule a new appointment!"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/category_list_progress_bar"
+            style="@style/default_progress_bar" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/idRVCoursePendingAppointment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </FrameLayout>
