--- a/app/src/main/res/navigation/nav_doctor.xml
+++ b/app/src/main/res/navigation/nav_doctor.xml
@@ -23,6 +23,6 @@
 
         <action
             android:id="@+id/action_AddDoctorFragment_to_DoctorActivity"
-            app:destination="@id/nav_doctor" />
+            app:destination="@id/DoctorListFragment" />
     </fragment>
 </navigation>
