--- a/app/src/main/res/layout/schedule_appointment_fragment.xml
+++ b/app/src/main/res/layout/schedule_appointment_fragment.xml
@@ -223,23 +223,19 @@
 
         </LinearLayout>
 
+
+
         <Button
             android:id="@+id/bookAptBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="515dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/rounded_rectangle_bg"
+            style="@style/default_disabled_button"
+            android:layout_width="300dp"
+            android:layout_height="51dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="@color/primary_color"
-            android:onClick="bookTimeSlotAction"
-            android:padding="10dp"
-            android:text="Book Appointment"
-            android:textColorHint="@color/white"
-            android:layout_alignParentBottom="true"
-            android:textSize="14dp"
-            android:textStyle="bold" />
+            android:clickable="true"
+            android:enabled="true"
+            android:text="Book Appointment"/>
 
     </RelativeLayout>
 
