--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -115,6 +115,8 @@
             android:layout_marginHorizontal="80dp"
             android:maxWidth="35dp"
             android:text="Save"
+            android:backgroundTint="@color/primary_color"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:visibility="gone"
             app:cornerRadius="100dp" />
