--- a/app/src/main/res/layout/add_clinic_admin.xml
+++ b/app/src/main/res/layout/add_clinic_admin.xml
@@ -118,6 +118,8 @@
             android:maxWidth="35dp"
             android:text="Save"
             android:textAlignment="center"
+            android:backgroundTint="@color/primary_color"
+            android:textColor="@color/white"
             android:visibility="gone"
             app:cornerRadius="100dp" />
 
