--- a/app/src/main/res/navigation/nav_category.xml
+++ b/app/src/main/res/navigation/nav_category.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/add_category">
         <action
             android:id="@+id/action_AddCategoryFragment_to_CategoryActivity"
-            app:destination="@id/nav_category" />
+            app:destination="@id/CategoryListFragment" />
 
 
     </fragment>
